--- a/boxes/boxes.html
+++ b/boxes/boxes.html
@@ -51,9 +51,9 @@
 					<h2>subscription boxes</h2>
 					<h1>pick one</h1>
 					<div class="btn-grp">
-						<a href="../Nuesli_v1/starter.html" class="button draw meet">STARTER</a>
-						<a href="../Nuesli_v1/weekly.html" class="button draw meet">WEEKLY</a>
-						<a href="../Nuesli_v1/monthly.html" class="button draw meet">MONTHLY</a>
+						<a href="/starter.html" class="button draw meet">STARTER</a>
+						<a href="/weekly.html" class="button draw meet">WEEKLY</a>
+						<a href="/monthly.html" class="button draw meet">MONTHLY</a>
 					</div>
 				</div>
 
