--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -51,9 +51,9 @@
 					<h2>Recipes</h2>
 					<h1>pick one</h1>
 					<div class="btn-grp">
-						<a href="../Nuesli_v1/breakfast.html" class="button draw meet">BREAKFAST</a>
-						<a href="../Nuesli_v1/snack.html" class="button draw meet">SNACK</a>
-						<a href="../Nuesli_v1/dessert.html" class="button draw meet">DESSERT</a>
+						<a href="/breakfast.html" class="button draw meet">BREAKFAST</a>
+						<a href="/snack.html" class="button draw meet">SNACK</a>
+						<a href="/dessert.html" class="button draw meet">DESSERT</a>
 					</div>
 				</div>
 			</header>
