--- a/recipes/snack.html
+++ b/recipes/snack.html
@@ -49,17 +49,18 @@
 		<section class="cd-section services visible">
 			<header>
 				<div class="page">
-				<div class="cd-subpage">
-					<img src="img/BoxFlipped.png" alt="box" height="50%" width="50%" align="left">
+				<div class="cd-title">
+					<!-- <img src="img/BoxFlipped.png" alt="box" height="50%" width="50%" align="left">
 					<div class="fruits">
-						<img src="img/Fruits/Fruits_02.png" alt="Almond" height="70%" width="70%">
-					</div>
-					<div class="cd-starter">
-						<h2>weekly box</h2>
-						<h4>comes with 7 bottles</h4>
-						<p>Our Weekly Box offers a variety of options to choose from. This box are for those who would like the flexibility of choosing when to order their box. Our Weekly Box offers 7 bottles with the option of mixing and matching.</p>
+						<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
+					</div> -->
+					<!-- <div class="cd-starter"> -->
+						<h2>breakfast</h2>
 						<div class="btn-grp">
-							<a href="../Nuesli_v1/weekly.html" class="button draw meet">ADD TO CART</a>
+							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
+								Strawberry Yogurt Parfait</a>
+							<a href="../Nuesli_v1/snack.html" class="button draw meet">Hearty Banana Muffin</a>
+							<a href="../Nuesli_v1/dessert.html" class="button draw meet">French Toast Waffles</a>
 						</div>
 					</div>
 				</div>
