--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
-				<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
+				<a href="/index.html" class="selected" data-menu="index">
 					<img src="img/logo.svg" alt="" width="80px" height="17px">
 				</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
+				<a href="/boxes/index.html" data-menu="boxes">
 					<img src="img/boxes.svg" alt="" width="80px" height="37px">
 					our boxes
 				</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
+				<a href="/recipes/index.html" data-menu="recipes">
 					<img src="img/Recipes.svg" alt="" width="80px" height="47px">
 					recipes
 				</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli_v1/account.html" data-menu="account">
+				<a href="/account.html" data-menu="account">
 					<img src="img/Account.svg" alt="" width="80px" height="47px">
 					account
 				</a>
@@ -60,8 +60,7 @@
 				<div class="cd-quote">
 					<h1>
 						<!-- <img src="img/Logo_Icon_W.png"><br> -->
-						Nuesli's hearty cereal is made all organic ingredients. Perfect for those who are pursuing a
-						wholesome lifestyle. We believe in nurturing our bodies through the foods we eat.</h1>
+						Nuesli's hearty cereal is made all organic ingredients. Perfect for those who are pursuing a wholesome lifestyle. We believe in nurturing our bodies through the foods we eat.</h1>
 				</div>
 			</header>
 		</section>
