--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
-				<a href="/index.html" class="selected" data-menu="index">
+				<a href="../Nuesli/index.html" class="selected" data-menu="index">
 					<img src="img/logo.svg" alt="" width="80px" height="17px">
 				</a>
 			</li>
 
 			<li>
-				<a href="/boxes/index.html" data-menu="boxes">
+				<a href="../Nuesli/boxes/index.html" data-menu="boxes">
 					<img src="img/boxes.svg" alt="" width="80px" height="37px">
 					our boxes
 				</a>
 			</li>
 
 			<li>
-				<a href="/recipes/index.html" data-menu="recipes">
+				<a href="../Nuesli/recipes/index.html" data-menu="recipes">
 					<img src="img/Recipes.svg" alt="" width="80px" height="47px">
 					recipes
 				</a>
 			</li>
 
 			<li>
-				<a href="/account.html" data-menu="account">
+				<a href="../Nuesli/account.html" data-menu="account">
 					<img src="img/Account.svg" alt="" width="80px" height="47px">
 					account
 				</a>
