--- a/breakfast.html
+++ b/breakfast.html
@@ -57,10 +57,10 @@
 					<!-- <div class="cd-starter"> -->
 						<h2>breakfast</h2>
 						<div class="btn-grp">
-							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
+							<a href="#" class="button draw meet">
 								Strawberry Yogurt Parfait</a>
-							<a href="../Nuesli_v1/snack.html" class="button draw meet">Hearty Banana Muffin</a>
-							<a href="../Nuesli_v1/dessert.html" class="button draw meet">French Toast Waffles</a>
+							<a href="#" class="button draw meet">Hearty Banana Muffin</a>
+							<a href="#" class="button draw meet">French Toast Waffles</a>
 						</div>
 					</div>
 				</div>
