--- a/starter.html
+++ b/starter.html
@@ -51,16 +51,16 @@
 				<div class="page">
 				<div class="cd-subpage">
 					<!-- <h2>starter box</h2> -->
-					<img src="img/BoxFlipped.png" alt="box" height="50%" width="50%" align="left">
+					<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
 					<div class="fruits">
 						<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
 					</div>
 					<div class="cd-starter">
-						<h2>starter box</h2>
+						<h5>starter box</h5>
 						<h4>comes with 3 bottles</h4>
 						<p>Our Starter Box is to introduce a healthier lifestyle by starting off the day right. We believe that eating one bottle every morning will bring a fuller, energy packed day. Our Starter Box offers three flavors to begin your journey.</p>
 						<div class="btn-grp">
-							<a href="../Nuesli_v1/starter.html" class="button draw meet">ADD TO CART</a>
+							<a href="/starter.html" class="button draw meet">ADD TO CART</a>
 						</div>
 					</div>
 				</div>
