--- a/dessert.html
+++ b/dessert.html
@@ -54,7 +54,7 @@
 						<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
 					</div> -->
 					<!-- <div class="cd-starter"> -->
-						<h2>breakfast</h2>
+						<h2>desserts</h2>
 						<div class="btn-grp">
 							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
 								Strawberry Yogurt Parfait</a>
