--- a/lunch.html
+++ b/lunch.html
@@ -55,7 +55,7 @@
 						<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
 					</div> -->
 					<!-- <div class="cd-starter"> -->
-						<h2>breakfast</h2>
+						<h2>lunch</h2>
 						<div class="btn-grp">
 							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
 								Strawberry Yogurt Parfait</a>
