--- a/monthly.html
+++ b/monthly.html
@@ -50,16 +50,16 @@
 			<header>
 				<div class="page">
 				<div class="cd-subpage">
-					<img src="img/BoxFlipped.png" alt="box" height="50%" width="50%" align="left">
+					<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
 					<div class="fruits">
 						<img src="img/Fruits/Fruits_03.png" alt="Almond" height="70%" width="70%">
 					</div>
 					<div class="cd-starter">
-						<h2>monthly box</h2>
+						<h5>monthly box</h5>
 						<h4>comes with 28 bottles</h4>
 						<p>Our Monthly Box offers specially made flavors, this is for those would like the convience of having all their bottles shipped to them. 28 may get a bit bland after a week or two, we now offer custimization for each day of the month. By downloading our app, you will be able to spice up each of your bottles.</p>
 						<div class="btn-grp">
-							<a href="../Nuesli_v1/monthly.html" class="button draw meet">ADD TO CART</a>
+							<a href="/monthly.html" class="button draw meet">ADD TO CART</a>
 						</div>
 					</div>
 				</div>
