--- a/recipes.html
+++ b/recipes.html
@@ -52,7 +52,7 @@
 					<h1>pick one</h1>
 					<div class="btn-grp">
 						<a href="/breakfast.html" class="button draw meet">BREAKFAST</a>
-						<a href="/snack.html" class="button draw meet">SNACK</a>
+						<a href="/lunch.html" class="button draw meet">LUNCH</a>
 						<a href="/dessert.html" class="button draw meet">DESSERT</a>
 					</div>
 				</div>
