--- a/weekly.html
+++ b/weekly.html
@@ -50,12 +50,12 @@
 			<header>
 				<div class="page">
 				<div class="cd-subpage">
-					<img src="img/BoxFlipped.png" alt="box" height="50%" width="50%" align="left">
+					<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
 					<div class="fruits">
 						<img src="img/Fruits/Fruits_02.png" alt="Almond" height="70%" width="70%">
 					</div>
 					<div class="cd-starter">
-						<h2>weekly box</h2>
+						<h5>weekly box</h5>
 						<h4>comes with 7 bottles</h4>
 						<p>Our Weekly Box offers a variety of options to choose from. This box are for those who would like the flexibility of choosing when to order their box. Our Weekly Box offers 7 bottles with the option of mixing and matching.</p>
 						<div class="btn-grp">
