--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </head>
 
 <body>
-	<nav class="cd-side-navigation">
+	<header class="cd-side-navigation">
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="" width="80px" height="17px">
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="17px">
 				</a>
 			</li>
 
@@ -52,7 +52,7 @@
 				</a>
 			</li>
 		</ul>
-	</nav>
+	</header>
 
 	<main class="cd-main">
 		<section class="cd-section index visible">
