--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-	<header class="cd-side-navigation">
+	<nav class="cd-side-navigation">
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
@@ -52,7 +52,7 @@
 				</a>
 			</li>
 		</ul>
-	</header>
+	</nav>
 
 	<main class="cd-main">
 		<section class="cd-section index visible">
