--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
 
 			<li>
 				<a href="../Nuesli/boxes/index.html" data-menu="boxes">
-					<img src="img/boxes.svg" alt="" width="80px" height="37px">
+					<img src="img/boxes.svg" alt="" width="80" height="37">
 					our boxes
 				</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/recipes/index.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80px" height="47px">
+					<img src="img/Recipes.svg" alt="" width="80" height="47">
 					recipes
 				</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80px" height="47px">
+					<img src="img/Account.svg" alt="" width="80" height="47">
 					account
 				</a>
 			</li>
