--- a/starter.html
+++ b/starter.html
@@ -17,27 +17,27 @@
 		<ul>
 			<li>
 				<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="" width="80px" height="17px">
+					<img src="img/logo.svg" alt="" width="80" height="17">
 				</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
-					<img src="img/boxes.svg" alt="" width="80px" height="37px">
+					<img src="img/boxes.svg" alt="" width="80" height="37">
 					our boxes
 				</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80px" height="47px">
+					<img src="img/Recipes.svg" alt="" width="80" height="47">
 					recipes
 				</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli_v1/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80px" height="47px">
+					<img src="img/Account.svg" alt="" width="80" height="47">
 					account
 				</a>
 			</li>
