--- a/dessert.html
+++ b/dessert.html
@@ -57,9 +57,9 @@
 						<h1>desserts</h1>
 						<div class="btn-grp">
 							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
-								Strawberry Yogurt Parfait</a>
-							<a href="../Nuesli_v1/snack.html" class="button draw meet">Hearty Banana Muffin</a>
-							<a href="../Nuesli_v1/dessert.html" class="button draw meet">French Toast Waffles</a>
+								Oatmeal Chocolate Bars</a>
+							<a href="../Nuesli_v1/snack.html" class="button draw meet">Black Bottom Oatmeal Pie</a>
+							<a href="../Nuesli_v1/dessert.html" class="button draw meet">Cinnamon Swirl With Oatmeal Crust</a>
 						</div>
 					</div>
 				</div>
