--- a/lunch.html
+++ b/lunch.html
@@ -58,9 +58,9 @@
 						<h1>lunch</h1>
 						<div class="btn-grp">
 							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
-								Strawberry Yogurt Parfait</a>
-							<a href="../Nuesli_v1/snack.html" class="button draw meet">Hearty Banana Muffin</a>
-							<a href="../Nuesli_v1/dessert.html" class="button draw meet">French Toast Waffles</a>
+								Bueberry Oatmeal Bread</a>
+							<a href="../Nuesli_v1/snack.html" class="button draw meet">Oatmeal with Soft-Boiled Egg</a>
+							<a href="../Nuesli_v1/dessert.html" class="button draw meet">Chickpea Oat Veggie Burger</a>
 						</div>
 					</div>
 				</div>
