--- a/starter.html
+++ b/starter.html
@@ -51,7 +51,7 @@
 				<div class="page">
 				<div class="cd-subpage">
 					<!-- <h2>starter box</h2> -->
-					<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
+					<img src="img/Box_02.png" alt="box" height="400" width="400" align="left">
 					<div class="fruits">
 						<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
 					</div>
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 				</div>
-				</div> 
+				</div>
 			</header>
 		</section> 
 	</main> 
