--- a/weekly.html
+++ b/weekly.html
@@ -29,7 +29,7 @@
 			</li>
 
 			<li>
-				<a href="../Nuesli_v1/recipes.html" data-menu="recipes"> 
+				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
 					<img src="img/Recipes.svg" alt="" width="80" height="47">
 					recipes
 				</a>
@@ -50,7 +50,7 @@
 			<header>
 				<div class="page">
 				<div class="cd-subpage">
-					<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
+					<img src="img/Box_02.png" alt="box" height="400" width="400" align="left">
 					<div class="fruits">
 						<img src="img/Fruits/Fruits_02.png" alt="Almond" height="70%" width="70%">
 					</div>
