--- a/weekly.html
+++ b/weekly.html
@@ -52,14 +52,14 @@
 				<div class="cd-subpage">
 					<img src="img/Box_02.png" alt="box" height="400" width="400" align="left">
 					<div class="fruits">
-						<img src="img/Fruits/Fruits_02.png" alt="Almond" height="70%" width="70%">
+						<img src="img/Fruits/Fruits_03.png" alt="Almond" height="70%" width="70%">
 					</div>
 					<div class="cd-starter">
-						<h4>weekly box</h4>
-						<h5>comes with 7 bottles</h5>
-						<p>Our Weekly Box offers a variety of options to choose from. This box are for those who would like the flexibility of choosing when to order their box. Our Weekly Box offers 7 bottles with the option of mixing and matching.</p>
+						<h4>monthly box</h4>
+						<h5>comes with 28 bottles</h5>
+						<p>Our Monthly Box offers specially made flavors, this is for those would like the convience of having all their bottles shipped to them. 28 may get a bit bland after a week or two, we now offer custimization for each day of the month. By downloading our app, you will be able to spice up each of your bottles.</p>
 						<div class="btn-grp">
-							<a href="../Nuesli_v1/weekly.html" class="button draw meet">ADD TO CART</a>
+							<a href="/monthly.html" class="button draw meet">ADD TO CART</a>
 						</div>
 					</div>
 				</div>
