--- a/index.html
+++ b/index.html
@@ -1,79 +1,99 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="no-js">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+      href="http://fonts.googleapis.com/css?family=PT+Sans:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/modernizr.js"></script>
 
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/modernizr.js"></script>
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/jlz3ado.css" />
 
-	<!-- ADOBE FONTS -->
-	<link rel="stylesheet" href="https://use.typekit.net/jlz3ado.css">
+    <!-- GOOGLE FONTS -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Cormorant+Upright|Open+Sans|Open+Sans+Condensed:300&display=swap"
+      rel="stylesheet"
+    />
 
-	<!-- GOOGLE FONTS -->
-	<link href="https://fonts.googleapis.com/css?family=Cormorant+Upright|Open+Sans|Open+Sans+Condensed:300&display=swap"
-	  rel="stylesheet">  
+    <title>Nuesli</title>
+  </head>
 
-	<title>Nuesli</title>
+  <body>
+    <nav class="cd-side-navigation">
+      <ul>
+        <li>
+          <a href="../Nuesli/index.html" class="selected" data-menu="index">
+            <img
+              src="img/logo.svg"
+              alt="Nuesli Logo"
+              width="80px"
+              height="17px"
+            />
+          </a>
+        </li>
 
-</head>
+        <li>
+          <a href="../Nuesli/boxes/index.html" data-menu="boxes"
+            ><img src="img/boxes.svg" alt="" width="80" height="37"
+          /></a>
+          <a href="../Nuesli/boxes/index.html" data-menu="boxes">Our Boxes</a>
+        </li>
 
-<body>
-	<nav class="cd-side-navigation">
-		<ul>
-			<li>
-				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="17px">
-				</a>
-			</li>
+        <li>
+          <a href="../Nuesli/recipes/index.html" data-menu="recipes">
+            <img
+              src="img/Recipes.svg"
+              alt=""
+              width="80"
+              height="47"
+            />Recipes</a
+          >
+        </li>
 
-			<li>
-				<a href="../Nuesli/boxes/index.html" data-menu="boxes">
-					<img src="img/boxes.svg" alt="" width="80" height="37">
-					our boxes
-				</a>
-			</li>
+        <li>
+          <a href="../Nuesli/account.html" data-menu="account">
+            <img
+              src="img/Account.svg"
+              alt=""
+              width="80"
+              height="47"
+            />Account</a
+          >
+        </li>
+      </ul>
+    </nav>
 
-			<li>
-				<a href="../Nuesli/recipes/index.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80" height="47">
-					recipes
-				</a>
-			</li>
+    <main class="cd-main">
+      <section class="cd-section index visible">
+        <header>
+          <div class="cd-quote">
+            <h1>
+              <!-- <img src="img/Logo_Icon_W.png"><br> -->
+              Nuesli's hearty cereal is made all organic ingredients. Perfect
+              for those who are pursuing a wholesome lifestyle. We believe in
+              nurturing our bodies through the foods we eat.
+            </h1>
+            <div class="btn-grp">
+              <a href="#" class="button draw meet">SEE MORE</a>
+            </div>
+          </div>
+        </header>
+      </section>
+    </main>
 
-			<li>
-				<a href="../Nuesli/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80" height="47">
-					account
-				</a>
-			</li>
-		</ul>
-	</nav>
+    <div id="cd-loading-bar" data-scale="1" class="index"></div>
 
-	<main class="cd-main">
-		<section class="cd-section index visible">
-			<header>
-				<div class="cd-quote">
-					<h1>
-						<!-- <img src="img/Logo_Icon_W.png"><br> -->
-						Nuesli's hearty cereal is made all organic ingredients. Perfect for those who are pursuing a wholesome lifestyle. We believe in nurturing our bodies through the foods we eat.</h1>
-				</div>
-			</header>
-		</section>
-	
-	</main>
-
-	<div id="cd-loading-bar" data-scale="1" class="index"></div>
-
-	<!-- MAIN JS -->
-	<script src="js/jquery-2.1.4.js"></script>
-	<script src="js/velocity.min.js"></script>
-	<script src="js/main.js"></script>
-
-</body>
-
+    <!-- MAIN JS -->
+    <script src="js/jquery-2.1.4.js"></script>
+    <script src="js/velocity.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
