--- a/lunch.html
+++ b/lunch.html
@@ -19,24 +19,24 @@
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="17px" />
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" />
 				</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
-						height="37" /></a>
+						height="40" /></a>
 				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/recipes.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80" height="47" />Recipes</a>
+					<img src="img/Recipes.svg" alt="" width="80" height="40" />Recipes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80" height="47" />Account</a>
+					<img src="img/Account.svg" alt="" width="80" height="38" />Account</a>
 			</li>
 		</ul>
 	</nav>
@@ -54,9 +54,9 @@
 						<h1>lunch</h1>
 						<div class="btn-grp">
 							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
-								Strawberry Yogurt Parfait</a>
-							<a href="../Nuesli_v1/snack.html" class="button draw meet">Hearty Banana Muffin</a>
-							<a href="../Nuesli_v1/dessert.html" class="button draw meet">French Toast Waffles</a>
+								Banana Zucchini Oat Cups</a>
+							<a href="../Nuesli_v1/snack.html" class="button draw meet">Chickpea Oat Veggie Burger</a>
+							<a href="../Nuesli_v1/dessert.html" class="button draw meet">Oatmeal Baked Chicken</a>
 						</div>
 					</div>
 				</div>
