--- a/starter.html
+++ b/starter.html
@@ -48,7 +48,7 @@
 				<div class="page">
 					<div class="cd-subpage">
 						<!-- <h2>starter box</h2> -->
-						<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
+						<img class="box-img" src="img/Box_02.png" alt="box" height="40%" width="40%">
 						<div class="fruits">
 							<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
 						</div>
