--- a/monthly.html
+++ b/monthly.html
@@ -46,7 +46,7 @@
 			<header>
 				<div class="page">
 					<div class="cd-subpage">
-						<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
+						<img class="box-img" src="img/Box_02.png" alt="box" height="40%" width="40%">
 						<div class="fruits">
 							<img src="img/Fruits/Fruits_03.png" alt="Almond" height="70%" width="70%">
 						</div>
