--- a/account.html
+++ b/account.html
@@ -42,7 +42,7 @@
 	</nav>
 	<main class="cd-main">
 		<section class="cd-section contact visible">
-			<header>
+			<div class="header">
 				<div class="cd-title">
 					<!-- <h2>account</h2> -->
 					<div class="login-page">
@@ -63,7 +63,7 @@
 						</div>
 					</div>
 				</div>
-			</header>
+			</div>
 		</section>
 	</main>
 
