--- a/boxes.html
+++ b/boxes.html
@@ -43,7 +43,7 @@
 
 		<main class="cd-main">
 			<section class="cd-section services visible">
-				<header>
+				<div class="header">
 					<div class="cd-title">
 						<h1>subscription boxes</h1>
 						<h2>pick one</h2>
@@ -55,19 +55,21 @@
 					</div>
 
 					<a href="#boxes-content" class="cd-scroll"></a>
-				</header>
+				</div>
 
 				<div class="cd-content" id="boxes-content">
 					<h1>starter</h1>
 					<p>
-						Scared of commitment? Do not worry, we offer a sample box to ease into the healthy lifestyle.
+						Scared of commitment? Do not worry, we offer a sample box to ease into the healthy
+						lifestyle.
 						The
 						sample box offers 3 bottle of our special rolled oats to try.
 					</p>
 
 					<h1>weekly</h1>
 					<p>
-						Our weekly boxes are for those who are not able to commit to a long duration. This box you are
+						Our weekly boxes are for those who are not able to commit to a long duration. This box you
+						are
 						able
 						to customize using our app. The weekly box comes each following Monday, offering 7 bottles.
 					</p>
@@ -76,13 +78,15 @@
 					<p>
 						Commitment was just never an issue, said everyone who joined. This box is for those who like
 						having
-						a hearty breakfast each morning. Our monthly box offers a number of upcoming flavors. Monthly
+						a hearty breakfast each morning. Our monthly box offers a number of upcoming flavors.
+						Monthly
 						subscription will come with 28 bottles at the beginning of the month.
 					</p>
 
 					<h1>toppings</h1>
 					<p>
-						Allergies? No problem. Don't like nuts? No problem. These are our current toppings that we offer
+						Allergies? No problem. Don't like nuts? No problem. These are our current toppings that we
+						offer
 						during this month, if you would like to mix and match download our app on all platforms.
 					</p>
 				</div>
