--- a/dessert.html
+++ b/dessert.html
@@ -43,7 +43,7 @@
 
 	<main class="cd-main">
 		<section class="cd-section services visible">
-			<header>
+			<div class="header">
 				<div class="page">
 					<div class="cd-title">
 						<!-- <img src="img/BoxFlipped.png" alt="box" height="50%" width="50%" align="left">
@@ -61,8 +61,8 @@
 						</div>
 					</div>
 				</div>
-				</div>
-			</header>
+			</div>
+			</div>
 		</section>
 	</main>
 
