--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <main class="cd-main">
     <section class="cd-section index visible">
-      <header>
+      <div class="header">
         <div class="cd-quote">
           <h1>
             <!-- <img src="img/Logo_Icon_W.png"><br> -->
@@ -61,7 +61,7 @@
             <a href="#" class="button draw meet">SEE MORE</a>
           </div>
         </div>
-      </header>
+      </div>
     </section>
   </main>
 
