--- a/recipes.html
+++ b/recipes.html
@@ -42,7 +42,7 @@
 	</nav>
 	<main class="cd-main">
 		<section class="cd-section projects visible">
-			<header>
+			<div class="header">
 				<div class="cd-title">
 					<h1>Recipes</h1>
 					<h2>pick one</h2>
@@ -52,7 +52,7 @@
 						<a href="/dessert.html" class="button draw meet">DESSERT</a>
 					</div>
 				</div>
-			</header>
+			</div>
 		</section>
 	</main>
 
