--- a/starter.html
+++ b/starter.html
@@ -44,7 +44,7 @@
 
 	<main class="cd-main">
 		<section class="cd-section services visible">
-			<header>
+			<div class='header'>
 				<div class="page">
 					<div class="cd-subpage">
 						<!-- <h2>starter box</h2> -->
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 				</div>
-			</header>
+			</div>
 		</section>
 	</main>
 
