--- a/weekly.html
+++ b/weekly.html
@@ -44,7 +44,7 @@
 
 	<main class="cd-main">
 		<section class="cd-section services visible">
-			<header>
+			<div class="header">
 				<div class="page">
 					<div class="cd-subpage">
 						<img class="box-img" src="img/Box_02.png" alt="box" height="40%" width="40%">
@@ -63,7 +63,7 @@
 						</div>
 					</div>
 				</div>
-			</header>
+			</div>
 		</section>
 	</main>
 
