--- a/weekly.html
+++ b/weekly.html
@@ -23,23 +23,21 @@
 			</li>
 
 			<li>
-				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
-						height="40" />boxes</a>
-				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
+				<a href="../Nuesli/boxes.html" data-menu="boxes">
+					<img src="img/boxes.svg" alt="Our Boxes" width="80" height="40" />boxes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/recipes.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80" height="40" />Recipes</a>
+					<img src="img/Recipes.svg" alt="Our Recipes" width="80" height="40" />Recipes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80" height="38" />Account</a>
+					<img src="img/Account.svg" alt="Our Recipes" width="80" height="38" />Account</a>
 			</li>
 		</ul>
 	</nav>
-
 
 	<main class="cd-main">
 		<section class="cd-section services visible">
