--- a/starter.html
+++ b/starter.html
@@ -41,7 +41,7 @@
 
 	<main class="cd-main">
 		<section class="cd-section services visible">
-			<div class='header'>
+			<div class="header">
 				<div class="page">
 					<div class="cd-subpage">
 						<!-- <h2>starter box</h2> -->
